[package]
name = "rublog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2"
serde = { version = "1.0", features = ["derive"] }
tera = "1"
comrak = "0.9.1"
toml = "0.5"
lazy_static = "1.4"
regex ="1.0"
